# DE-docker-workshop

./: .gitignore  README.md  kkkk  main.py  pyproject.toml
batch/: Spark_in_Colab.ipynb  download.sh
homeworks/homework-workshop1/: readme.md
homeworks/homework3-datawarehouse/: Answers.md  load_yellow_taxi_data.py  questions.md
homeworks/homework5-data-platforms/: readme.md
homeworks/homework6-batch/: readme.md
homeworks/homework7-streaming/: readme.md
homeworks/honework4-analytics-engineering/: readme.md
my-taxi-pipeline/pipeline/: pipeline.yml
my-taxi-pipeline/pipeline/assets/ingestion/: payment_lookup.asset.yml  requirements.txt  trips.py
my-taxi-pipeline/pipeline/assets/reports/: trips_report.sql
my-taxi-pipeline/pipeline/assets/staging/: trips.sql
pipeline/: Dockerfile  commands.txt  docker-compose.yml  ingest_data.py  ingest_data2.py  load_yellow_taxi_data.py  notebook.ipynb  pipeline.py  pyproject.toml
streaming/: Dockerfile.flink  docker-compose.yaml  flink-config.yaml  init.sql  pyproject.flink.toml  pyproject.toml
streaming/notebooks/: producer.ipynb
streaming/src/consumers/: green_consumer.py
streaming/src/job/: hourly_tips.py  session_window_streak.py  tumbling_window_pickup.py
streaming/src/producers/: green_producer.py  producer.py
taxi-pipeline/: .gitignore  pyproject.toml  taxi_pipeline.py
taxi_rides_ny/: dbt_project.yml
taxi_rides_ny/models/staging/: schema.yml  sources.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
