[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "psycopg[binary,pool]>=3.3.2",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.3",
    "pandas>=2.2.0",
    "pyarrow>=23.0.0"
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
